--- a/LLM_Business_News_Parsing/txt_Model_KMeans.tex
+++ b/LLM_Business_News_Parsing/txt_Model_KMeans.tex
@@ -9,7 +9,7 @@
  Each article $i \in \mathcal{D}$ is a textual document detailing an event that directly pertains to a subset of firms $\mathcal{F}^i \subseteq \F_{\t{IBEX35}}$.
 % Each article $i\in \D$ is a textual document narrating an event that directly involves a set of firms %$\F^i \subseteq \F_{\t{IBEX35}}$.
 %
-The publication date and time of each article are represented as $\mathcal{Y}_0^i := \langle d_0^i, t_0^i \rangle$, where $d_0^i$ captures the date 
+The publication date and time of each article are represented as $\mathcal{Y}_0^i = \langle d_0^i, t_0^i \rangle$, where $d_0^i$ captures the date 
 (YYYY-MM-DD) 
 and $t_0^i$ captures the time
  (HH:MM) 
