--- a/Too-good-to-be-true/__main__.tex
+++ b/Too-good-to-be-true/__main__.tex
@@ -33,6 +33,13 @@
 
 \newpage
 \setcounter{page}{1}
+
+\noindent \Vhrulefill \\
+{\centering
+\href{https://chatgpt.com/share/66f52f14-4574-800d-8d1a-d45976e993d0}{\LARGE{Conversation w/ ChatGPT}}
+\par }
+
+\noindent \Vhrulefill
 %%%%%%%%%%%%%%%%%% SECTIONS %%%%%%%%%%%%%%%%%%%%%%
 \input{txt_1_Introduction.tex}
 \input{txt_2_Literature_Review.tex}
