Unified Intro+Literature Review

--- a/LLM_Business_News_Parsing/__main__.tex
+++ b/LLM_Business_News_Parsing/__main__.tex
@@ -22,7 +22,10 @@
 }}
 
 \author[1]{
-{ \bx \bx \bx Jesus Villota Miranda$^{\dagger}$\footnote{
+{ 
+%\bx \bx 
+\sx \bx 
+Jesus Villota Miranda$^{\dagger}$\footnote{
 %\textsc{Cemfi} 
 I am grateful to Enrique Sentana, Dante Amengual, Julio Crego, Francisco Penaranda, Nicolas Forteza, Matias Covarrubias, Javier Suarez and David Martinez-Miera for useful comments and feedback. 
 I acknowledge financial support from Banco de España (BdE). 
@@ -56,7 +59,7 @@ $\big{>}$
 \input{txt__ABSTRACT.tex}
 %----------------------------------------------------
 
-\bigskip
+%\bigskip
 \noindent\textbf{JEL Codes:} G12, G14, C45, C58, C63, D83
 
 \noindent\textbf{Keywords:} Large Language Models, Business News, Stock Market Reaction, Market Efficiency
@@ -174,11 +177,11 @@ $\big{>}$
 %----------------------------------------------------
 
 
-%%%%%%%%%%%% LITERATURE REVIEW %%%%%%%%%%%%%%%%%%
-\section{Literature Review}
-%----------------------------------------------------
-\input{txt_literature_review.tex}
-%----------------------------------------------------
+%%%%%%%%%%%%% LITERATURE REVIEW %%%%%%%%%%%%%%%%%%
+%\section{Literature Review}
+%%----------------------------------------------------
+%\input{txt_literature_review.tex}
+%%----------------------------------------------------
 
 
 %%%%%%%%%%%%%%%%%%% DATA %%%%%%%%%%%%%%%%%%%%%%%%
