--- a/LLM_Business_News_Parsing/bib_references.bib
+++ b/LLM_Business_News_Parsing/bib_references.bib
@@ -27,6 +27,47 @@
   publisher={Elsevier}
 }
 
+@inproceedings{lee2020bert,
+  title={BERT-Based stock market sentiment analysis},
+  author={Lee, Chien-Cheng and Gao, Zhongjian and Tsai, Chun-Li},
+  booktitle={2020 IEEE International Conference on Consumer Electronics-Taiwan (ICCE-Taiwan)},
+  pages={1--2},
+  year={2020},
+  organization={IEEE}
+}
+
+@article{garcia2013sentiment,
+  title={Sentiment during recessions},
+  author={Garcia, Diego},
+  journal={The journal of finance},
+  volume={68},
+  number={3},
+  pages={1267--1300},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+ @article{tetlock2008more,
+  title={More than words: Quantifying language to measure firms' fundamentals},
+  author={Tetlock, Paul C and Saar-Tsechansky, Maytal and Macskassy, Sofus},
+  journal={The journal of finance},
+  volume={63},
+  number={3},
+  pages={1437--1467},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@article{hanley2010information,
+  title={The information content of IPO prospectuses},
+  author={Hanley, Kathleen Weiss and Hoberg, Gerard},
+  journal={The Review of Financial Studies},
+  volume={23},
+  number={7},
+  pages={2821--2864},
+  year={2010},
+  publisher={Oxford University Press}
+}
 
 @article{chen2022expected,
   title={Expected returns and large language models},
@@ -206,7 +247,7 @@
 @article{jegadeesh2013word,
   title={Word power: A new approach for content analysis},
   author={Jegadeesh, Narasimhan and Wu, Di},
-  journal={Journal of financial economics},
+  journal={Journal of Financial Economics},
   volume={110},
   number={3},
   pages={712--729},
@@ -266,7 +307,7 @@
 @article{chan2003stock,
   title={Stock price reaction to news and no-news: drift and reversal after headlines},
   author={Chan, Wesley S},
-  journal={Journal of financial economics},
+  journal={Journal of Financial Economics},
   volume={70},
   number={2},
   pages={223--260},
@@ -277,7 +318,7 @@
 @article{jegadeesh1993returns,
   title={Returns to buying winners and selling losers: Implications for stock market efficiency},
   author={Jegadeesh, Narasimhan and Titman, Sheridan},
-  journal={The Journal of finance},
+  journal={The Journal of Finance},
   volume={48},
   number={1},
   pages={65--91},
@@ -294,4 +335,139 @@
   pages={573--599},
   year={2021},
   publisher={Elsevier}
+}
+
+@book{cutler1988moves,
+  title={What moves stock prices?},
+  author={Cutler, David M and Poterba, James M and Summers, Lawrence H},
+  volume={487},
+  year={1988},
+  publisher={National Bureau of Economic Research Cambridge, Massachusetts}
+}
+
+@article{mitchell1994impact,
+  title={The impact of public information on the stock market},
+  author={Mitchell, Mark L and Mulherin, J Harold},
+  journal={The Journal of Finance},
+  volume={49},
+  number={3},
+  pages={923--950},
+  year={1994},
+  publisher={Wiley Online Library}
+}
+
+@article{abarbanell1992tests,
+  title={Tests of analysts' overreaction/underreaction to earnings information as an explanation for anomalous stock price behavior},
+  author={Abarbanell, Jeffery S and Bernard, Victor L},
+  journal={The Journal of Finance},
+  volume={47},
+  number={3},
+  pages={1181--1207},
+  year={1992},
+  publisher={Wiley Online Library}
+}
+
+@article{loughran2011liability,
+  title={When is a liability not a liability? Textual analysis, dictionaries, and 10-Ks},
+  author={Loughran, Tim and McDonald, Bill},
+  journal={The Journal of Finance},
+  volume={66},
+  number={1},
+  pages={35--65},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{michaely1995price,
+  title={Price reactions to dividend initiations and omissions: Overreaction or drift?},
+  author={Michaely, Roni and Thaler, Richard H and Womack, Kent L},
+  journal={the Journal of Finance},
+  volume={50},
+  number={2},
+  pages={573--608},
+  year={1995},
+  publisher={Wiley Online Library}
+}
+
+@article{scherbina2015economic,
+  title={Economic linkages inferred from news stories and the predictability of stock returns},
+  author={Scherbina, Anna and Schlusche, Bernd},
+  journal={AEI Economics Working Paper},
+  year={2015}
+}
+
+@article{schwenkler2019network,
+  title={The network of firms implied by the news},
+  author={Schwenkler, Gustavo and Zheng, Hannan},
+  journal={Boston University Questrom School of Business Research Paper},
+  number={3320859},
+  year={2019}
+}
+
+@article{hu2021networks,
+  title={Networks of news and cross-sectional returns},
+  author={Hu, Junjie and H{\"a}rdle, Wolfgang Karl},
+  journal={arXiv preprint arXiv:2108.05721},
+  year={2021}
+}
+
+@article{hilt2024different,
+  title={The Different Networks of Firms Implied by the News},
+  author={Hilt, Victor and Schwenkler, Gustavo},
+  journal={Available at SSRN 4946066},
+  year={2024}
+}
+
+@inproceedings{oncharoen2018deep,
+  title={Deep learning for stock market prediction using event embedding and technical indicators},
+  author={Oncharoen, Pisut and Vateekul, Peerapon},
+  booktitle={2018 5th international conference on advanced informatics: concept theory and applications (ICAICTA)},
+  pages={19--24},
+  year={2018},
+  organization={IEEE}
+}
+@article{wei2018stock,
+  title={Stock trend prediction using financial market news and BERT},
+  author={Wei, Feng and Nguyen, Uyen Trang},
+  journal={Wall Street Journal},
+  year={2018}
+}
+
+@article{antweiler2006us,
+  title={Do US stock markets typically overreact to corporate news stories?},
+  author={Antweiler, Werner and Frank, Murray Z},
+  journal={Available at SSRN 878091},
+  year={2006}
+}
+
+@article{hansen2018transparency,
+  title={Transparency and deliberation within the FOMC: A computational linguistics approach},
+  author={Hansen, Stephen and McMahon, Michael and Prat, Andrea},
+  journal={The Quarterly Journal of Economics},
+  volume={133},
+  number={2},
+  pages={801--870},
+  year={2018},
+  publisher={Oxford University Press}
+}
+
+@article{bybee2023narrative,
+  title={Narrative asset pricing: Interpretable systematic risk factors from news text},
+  author={Bybee, Leland and Kelly, Bryan and Su, Yinan},
+  journal={The Review of Financial Studies},
+  volume={36},
+  number={12},
+  pages={4759--4787},
+  year={2023},
+  publisher={Oxford University Press}
+}
+
+@article{fama1970efficient,
+  title={Efficient capital markets},
+  author={Fama, Eugene F},
+  journal={Journal of finance},
+  volume={25},
+  number={2},
+  pages={383--417},
+  year={1970}
 }
